<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionsActivity"
    android:background="@drawable/instructions_background">

    <!--    Instructions Heading    -->
    <TextView
        android:id="@+id/instructions_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_heading"
        android:textSize="40sp"
        android:textColor="@color/dark_blue"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider1"
        android:layout_marginTop="60dp"/>

    <!--    Divider    -->
    <View
        android:id="@+id/divider1"
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:background="@color/dark_blue"

        app:layout_constraintTop_toBottomOf="@id/instructions_heading"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/distance_container"
        android:layout_marginTop="11dp"/>

    <!--    Distance    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/distance_container"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="11dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintBottom_toTopOf="@id/divider2">

        <ImageView
            android:id="@+id/inst_distance_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/distance"
            android:contentDescription="distance icon"
            
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:maxWidth="220dp"
            android:layout_height="wrap_content"
            android:text="@string/instruction_distance"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/dark_blue"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/inst_distance_icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    Divider    -->
    <View
        android:id="@+id/divider2"
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:background="@color/dark_blue"

        app:layout_constraintTop_toBottomOf="@id/distance_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/coin_container"
        android:layout_marginTop="11dp"/>

    <!--    Coins    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coin_container"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="11dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"

        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider3" >

        <ImageView
            android:id="@+id/inst_coin_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/inst_coin"
            android:contentDescription="coin icon"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:maxWidth="220dp"
            android:layout_height="wrap_content"
            android:text="@string/summary_coin_text"
            android:textSize="20sp"
            android:layout_marginEnd="20dp"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_blue"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="@id/inst_coin_icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    Divider    -->
    <View
        android:id="@+id/divider3"
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:background="@color/dark_blue"

        app:layout_constraintTop_toBottomOf="@id/coin_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/hazard_container"
        android:layout_marginTop="11dp"/>

    <!--    Hazards    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hazard_container"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="11dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"

        app:layout_constraintTop_toBottomOf="@id/divider3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider4">

        <ImageView
            android:id="@+id/inst_hazard_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/inst_hazard"
            android:contentDescription="hazard icon"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:maxWidth="220dp"
            android:layout_height="wrap_content"
            android:text="@string/instruction_hazard"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/dark_blue"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/inst_hazard_icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    Divider    -->
    <View
        android:id="@+id/divider4"
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:background="@color/dark_blue"

        app:layout_constraintTop_toBottomOf="@id/hazard_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/heart_container"
        android:layout_marginTop="11dp"/>

    <!--    Hearts    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/heart_container"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="11dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"

        app:layout_constraintTop_toBottomOf="@id/divider4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider5">

        <ImageView
            android:id="@+id/inst_heart_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/inst_heart"
            android:contentDescription="heart icon"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:maxWidth="220dp"
            android:layout_height="wrap_content"
            android:text="@string/instruction_heart"
            android:textSize="20sp"
            android:layout_marginEnd="20dp"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_blue"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="@id/inst_heart_icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    Divider    -->
    <View
        android:id="@+id/divider5"
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:background="@color/dark_blue"

        app:layout_constraintTop_toBottomOf="@id/heart_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/time_container"
        android:layout_marginTop="11dp"/>

    <!--    Time    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/time_container"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="11dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"

        app:layout_constraintTop_toBottomOf="@id/divider5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp">

        <ImageView
            android:id="@+id/inst_timer_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/isnt_timer"
            android:contentDescription="timer icon"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:maxWidth="220dp"
            android:layout_height="wrap_content"
            android:text="@string/instruction_timer"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/dark_blue"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/inst_timer_icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>